--- a/course-site/syllabus/POLS-8500-syllabus.tex
+++ b/course-site/syllabus/POLS-8500-syllabus.tex
@@ -79,8 +79,8 @@ morekeywords={__global__, __device__},  % CUDA specific keywords
 \rule{6.5in}{0.4pt}
 \begin{minipage}[t]{.96\textwidth}
 \begin{tabular}{llcccll}
-\textbf{Professor:} & Joe Ornstein & & &  & \textbf{Time:} & TTh 12:45pm -- 2:00pm \\
-\textbf{Email:} &  \href{mailto:jornstein@uga.edu}{jornstein@uga.edu} & & & & \textbf{Place:} & 101D Baldwin Hall\\
+\textbf{Professor:} & Joe Ornstein & & &  & \textbf{Time:} & Th 3:55pm -- 6:40pm \\
+\textbf{Email:} &  \href{mailto:jornstein@uga.edu}{jornstein@uga.edu} & & & & \textbf{Place:} & 101B Baldwin Hall\\
 \textbf{Website:} & \href{https://joeornstein.github.io/causal-inference/}{joeornstein.github.io/causal-inference/} & & & & &
 \end{tabular}
 \end{minipage}
