--- a/syllabus/POLS-8500-syllabus.tex
+++ b/syllabus/POLS-8500-syllabus.tex
@@ -90,11 +90,94 @@ morekeywords={__global__, __device__},  % CUDA specific keywords
 \setlength{\unitlength}{1in}
 \renewcommand{\arraystretch}{2}
 
+TODOTODOTODO
+
 \begin{figure}[h]
 	\centering
 	\href{https://xkcd.com/552/}{\includegraphics[width = 0.7\textwidth]{img/correlation.png}}
 \end{figure}
 
+\section*{Requirements}
+
+Your course grade will be based on three components.
+
+\begin{itemize}
+	\item \textbf{Readings and Annotations (25\%):} Each week, read the assigned chapters/articles and annotate through \href{https://app.perusall.com/courses/causal-inference-931431581/_/dashboard/assignments/bkheY4mFQz6gWEYur}{Perusall}.
+	\item \textbf{Replications (2 $\times$ 25\%):} Choose two of \textit{Optional Bonus Fun} papers on the syllabus below. Using their posted replication materials, recreate each paper's key results in a Quarto report. You will present your findings in a Mock Conference Presentation during class.
+	\item \textbf{Final Paper (25\%):} Write a final paper using one or more of the designs we introduced in class. This could be either an original research project or a re-analysis and extension of one of the papers you replicated.
+\end{itemize}
+
+
+\section*{Course Outline}
+
+Here is the rough plan of action for our semester together. Readings abbreviated ``NHK'' denote our primary textbook, Nick Huntington-Klein's \textit{The Effect}, available in hard copy or \href{https://theeffectbook.net/}{free online}.
+
+\subsection*{Week 1: Credibility, Causal Salads, and the Seven Deadly Sins}
+
+\textit{Required Reading:}
+
+\begin{itemize}
+	\item Angrist, Joshua D, and Jörn-Steffen Pischke. 2010. ``The Credibility Revolution in Empirical Economics: How Better Research Design Is Taking the Con out of Econometrics.'' \textit{Journal of Economic Perspectives} 24(2): 3–30.
+	\item McElreath, Richard. 2021. \href{https://elevanth.org/blog/2021/06/15/regression-fire-and-dangerous-things-1-3/}{\textit{Regression, Fire, and Dangerous Things.}}
+	\item Schrodt, Philip A. 2014. ``Seven Deadly Sins of Contemporary Quantitative Political Analysis.'' \textit{Journal of Peace Research} 51(2): 287–300.
+\end{itemize}
+
+
+
+
+\subsection*{Weeks 2-3: D'ya Like DAGs?}
+
+\textit{Required Reading:}
+
+\begin{itemize}
+	\item NHK Chapters X-Y 
+\end{itemize}
+
+\noindent \textit{Optional Bonus Fun:}
+
+\begin{itemize}
+	\item 
+\end{itemize}
+
+\subsection*{Week 3: Experiments (Both Natural and Unnatural)}
+
+\begin{itemize}
+	\item NHK Chapters X-Y
+	\item 
+\end{itemize}
+
+
+\subsection*{Week X: Omniscience + Linearity (Regression)}
+
+\begin{itemize}
+	\item Sensitivity Analysis Paper
+\end{itemize}
+
+\subsection*{Week X: Omniscience without Linearity (Matching)}
+
+\begin{itemize}
+	\item Hainmueller, Jens. 2012. ``Entropy Balancing for Causal Effects: A Multivariate Reweighting Method to Produce Balanced Samples in Observational Studies.'' \textit{Political Analysis} 20(1): 25–46.
+\end{itemize}
+
+
+\subsection*{Week X-Y: Regression Discontinuity}
+
+\textit{Required Readings:}
+
+\begin{itemize}
+	
+	\item Cattaneo, Matias D, Nicolas Idrobo, and Rocío Titiunik. 2018. ``A Practical Introduction to Regression Discontinuity Designs: Volume I.''
+	\item Marshall, John. 2022. ``Can Close Election Regression Discontinuity Designs Identify Effects of Winning Politician Characteristics?'' \textit{American Journal of Political Science}.
+	\item Ornstein, Joseph T. \& Duck-Mayr, JBrandon. 2022. ``Gaussian Process Regression Discontinuity''. \textit{Working Paper}.
+\end{itemize}
+
+\noindent \textit{Optional Bonus Fun:}
+
+\begin{itemize}
+	\item Klašnja, Marko, and Rocío Titiunik. 2017. ``The Incumbency Curse: Weak Parties, Term Limits, and Unfulfilled Accountability.'' \textit{The American Political Science Review} 111(1): 129–48.
+	\item Keele, Luke J., and Rocío Titiunik. 2015. ``Geographic Boundaries as Regression Discontinuities.'' \textit{Political Analysis} 23(1): 127–55.
+	
+\end{itemize}
 
 
 
