--- a/syllabus/POLS-8500-syllabus.tex
+++ b/syllabus/POLS-8500-syllabus.tex
@@ -103,7 +103,7 @@ Your course grade will be based on three components.
 
 \begin{itemize}
 	\item \textbf{Readings and Annotations (25\%):} Each week, read the assigned chapters/articles and annotate them using \href{https://hypothes.is/groups/Qm2VnAae/causal-inference}{Hypothesis}.
-	\item \textbf{Replications (2 $\times$ 25\%):} Choose two of \textit{Optional Bonus Fun} papers on the syllabus below (each student must choose a different set of papers). Using their posted replication materials, recreate the paper's key results in a Quarto report. You will present your findings in a Mock Conference Presentation during the second week of the module.
+	\item \textbf{Replications (2 $\times$ 25\%):} Choose two of \textit{Applications} papers on the syllabus below (each student must choose a different set of papers). Using their posted replication materials, recreate the paper's key results in a Quarto report. You will present your findings in a Mock Conference Presentation during the second week of the module.
 	\item \textbf{Final Paper (25\%):} Write a final paper using one or more of the designs we introduced in class. This could be either an original research project or a re-analysis and extension of one of the papers you replicated.
 \end{itemize}
 
@@ -122,7 +122,7 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 	\item Schrodt, Philip A. 2014. ``\href{https://journals.sagepub.com/doi/pdf/10.1177/0022343313499597}{Seven Deadly Sins of Contemporary Quantitative Political Analysis.}'' \textit{Journal of Peace Research} 51(2): 287–300.
 \end{itemize}
 
-\subsection*{Week 2: The Fundamental Problem of Causal Inference}
+\subsection*{Week 2: The Fundamental Problem}
 
 \textit{Required Reading:}
 
@@ -148,6 +148,8 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 
 \begin{itemize}
 	\item Pearl, Judea, and Dana Mackenzie. \textit{The Book of Why: The New Science of Cause and Effect. Penguin Science}. London: Penguin Books, 2019.
+	\item Acharya, Avidit, Matthew Blackwell, and Maya Sen. 2016. ``Explaining Causal Findings Without Bias: Detecting and Assessing Direct Effects.'' American Political Science Review 110(3): 512–29.
+	\item Montgomery, Jacob M., Brendan Nyhan, and Michelle Torres. ``How Conditioning on Posttreatment Variables Can Ruin Your Experiment and What to Do about It.'' \textit{American Journal of Political Science} 62, no. 3 (2018): 760–75.
 \end{itemize}
 
 \subsection*{Weeks 4--5: Experiments (Natural and Unnatural)}
@@ -156,13 +158,14 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 
 \begin{itemize}
 	\item NHK Chapters 9-11
-	\item Montgomery, Jacob M., Brendan Nyhan, and Michelle Torres. ``How Conditioning on Posttreatment Variables Can Ruin Your Experiment and What to Do about It.'' \textit{American Journal of Political Science} 62, no. 3 (2018): 760–75.
+
 \end{itemize}
 
-\noindent \textit{Optional Bonus Fun:}
+\noindent \textit{Applications:}
 
 \begin{itemize}
 	\item Hall, Andrew B., Connor Huff, and Shiro Kuriwaki. 2019. ``Wealth, Slaveownership, and Fighting for the Confederacy: An Empirical Study of the American Civil War.'' \textit{American Political Science Review} 113(3): 658–73.
+	\item Green, Donald P., Tiffany C. Davenport, and Kolby Hanson. 2019. ``Are There Long-Term Effects of the Vietnam Draft on Political Attitudes or Behavior? Apparently Not.'' \textit{Journal of Experimental Political Science} 6(02): 71–80.
 \end{itemize}
 
 \noindent \textit{Deeper Dives:}
@@ -179,6 +182,13 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 	\item NHK Chapter 12-14
 \end{itemize}
 
+\noindent \textit{Applications:}
+
+\begin{itemize}
+	\item Boyd, Christina L., Lee Epstein, and Andrew D. Martin. 2010. ``Untangling the Causal Effects of Sex on Judging.'' \textit{American Journal of Political Science} 54(2): 389–411.
+	\item Mendelberg, Tali, Katherine T. McCabe, and Adam Thal. 2017. ``College Socialization and the Economic Views of Affluent Americans.'' \textit{American Journal of Political Science} 61(3): 606–23.
+\end{itemize}
+
 
 \noindent \textit{Deeper Dives:}
 
@@ -186,6 +196,7 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 	\item Cinelli, Carlos, and Chad Hazlett. ``Making Sense of Sensitivity: Extending Omitted Variable Bias.'' \textit{Journal of the Royal Statistical Society: Series B (Statistical Methodology)} 82, no. 1 (2020): 39–67. https://doi.org/10.1111/rssb.12348.
 	\item Hainmueller, Jens. 2012. ``Entropy Balancing for Causal Effects: A Multivariate Reweighting Method to Produce Balanced Samples in Observational Studies.'' \textit{Political Analysis} 20(1): 25–46.
 	\item Xu, Yiqing, and Eddie Yang. 2022. ``Hierarchically Regularized Entropy Balancing.'' \textit{Political Analysis}: 1–8.
+	\item King, Gary, Christopher Lucas, and Richard A. Nielsen. 2017. ``The Balance-Sample Size Frontier in Matching Methods for Causal Inference.'' \textit{American Journal of Political Science} 61(2): 473–89.
 	\item King, Gary, and Richard Nielsen. 2019. ``Why Propensity Scores Should Not Be Used for Matching.'' \textit{Political Analysis}: 1–20.
 \end{itemize}
 
@@ -197,12 +208,17 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 	\item NHK Chapter 16
 \end{itemize}
 
+\noindent \textit{Applications:}
+
+\begin{itemize}
+	\item Stokes, Leah C. 2016. ``Electoral Backlash against Climate Policy: A Natural Experiment on Retrospective Voting and Local Resistance to Public Policy.'' \textit{American Journal of Political Science} 60(4): 958–74.
+\end{itemize}
 
 \noindent \textit{Deeper Dives:}
 
 \begin{itemize}
-	\item Hazlett, Chad, and Leonard Wainstein. ``Understanding, Choosing, and Unifying Multilevel and Fixed Effect Approaches.'' \textit{Political Analysis} 30, no. 1 (January 2022): 46–65.
 	\item Imai, Kosuke, and In Song Kim. ``On the Use of Two-Way Fixed Effects Regression Models for Causal Inference with Panel Data.'' \textit{Political Analysis} 29, no. 3 (July 2021): 405–15.
+	\item Hazlett, Chad, and Leonard Wainstein. ``Understanding, Choosing, and Unifying Multilevel and Fixed Effect Approaches.'' \textit{Political Analysis} 30, no. 1 (January 2022): 46–65.
 \end{itemize}
 
 \subsection*{Weeks 10--11: Difference-in-Differences}
@@ -213,11 +229,20 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 	\item NHK Chapter 18
 \end{itemize}
 
+\noindent \textit{Applications:}
+
+\begin{itemize}
+	\item Hall, Andrew B., and Jesse Yoder. 2022. ``Does Homeownership Influence Political Behavior? Evidence from Administrative Data.'' \textit{The Journal of Politics} 84(1): 351–66.
+	\item Knutsen, Carl Henrik, Andreas Kotsadam, Eivind Hammersmark Olsen, and Tore Wig. 2017. ``Mining and Local Corruption in Africa.'' \textit{American Journal of Political Science} 61(2): 320–34.
+\end{itemize}
+
 \noindent \textit{Deeper Dives:}
 
 \begin{itemize}
 	\item Roth, Jonathan, Pedro H. C. Sant’Anna, Alyssa Bilinski, and John Poe. ``What’s Trending in Difference-in-Differences? A Synthesis of the Recent Econometrics Literature.'' \textit{arXiv}, January 13, 2022. http://arxiv.org/abs/2201.01194.
+	\item Egami, Naoki, and Soichiro Yamauchi. 2022. ``Using Multiple Pretreatment Periods to Improve Difference-in-Differences and Staggered Adoption Designs.'' \textit{Political Analysis}: 1–18.
 	\item \href{https://www.youtube.com/user/ariesxyq/videos}{Causal Inference w/ Panel Data Lecture Series (Yiqing Xu)}
+	\item \href{https://bcallaway11.github.io/did/articles/did-basics.html}{The \texttt{did} package (Brant Callaway)}
 \end{itemize}
 
 \subsection*{Weeks 12--13: Instrumental Variables}
@@ -228,7 +253,7 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 	\item NHK Chapter 19
 \end{itemize}
 
-\noindent\textit{Optional Bonus Fun:}
+\noindent\textit{Applications:}
 
 \begin{itemize}
 	\item Miguel, Edward, Shanker Satyanath, and Ernest Sergenti. 2004. ``Economic Shocks and Civil Conflict: An Instrumental Variables Approach.'' \textit{Journal of Political Economy} 112(4): 725–53.
@@ -252,12 +277,13 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 \end{itemize}
 
 
-\noindent \textit{Optional Bonus Fun:}
+\noindent \textit{Applications:}
 
 \begin{itemize}
 	\item Klašnja, Marko, and Rocío Titiunik. 2017. ``The Incumbency Curse: Weak Parties, Term Limits, and Unfulfilled Accountability.'' \textit{The American Political Science Review} 111(1): 129–48.
 	\item Keele, Luke J., and Rocío Titiunik. 2015. ``Geographic Boundaries as Regression Discontinuities.'' \textit{Political Analysis} 23(1): 127–55.
 	\item Mummolo, Jonathan. 2018. ``Modern Police Tactics, Police-Citizen Interactions, and the Prospects for Reform.'' \textit{The Journal of Politics} 80(1): 1–15.
+	\item Hall, Andrew. 2015. ``What Happens When Extremists Win Primaries?'' \textit{American Political Science Review} 109(1): 1–46.
 \end{itemize}
 
 \noindent \textit{Deeper Dives:}
@@ -266,8 +292,13 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 	
 	\item Cattaneo, Matias D, Nicolas Idrobo, and Rocío Titiunik. 2018. ``A Practical Introduction to Regression Discontinuity Designs: Volume I.''
 	\item Marshall, John. 2022. ``Can Close Election Regression Discontinuity Designs Identify Effects of Winning Politician Characteristics?'' \textit{American Journal of Political Science}.
+	\item Hartman, Erin. 2021. ``Equivalence Testing for Regression Discontinuity Designs.'' \textit{Political Analysis} 29(4): 505–21.
 	\item Ornstein, Joseph T. \& Duck-Mayr, JBrandon. 2022. ``Gaussian Process Regression Discontinuity''. \textit{Working Paper}.
 \end{itemize}
+
+\subsection*{Week 16: Bonus Week}
+
+\textit{Readings TBD}
 
 
 \section*{Academic Honesty}
