--- a/syllabus/POLS-8500-syllabus.tex
+++ b/syllabus/POLS-8500-syllabus.tex
@@ -166,6 +166,7 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 \begin{itemize}
 	\item Hall, Andrew B., Connor Huff, and Shiro Kuriwaki. 2019. ``Wealth, Slaveownership, and Fighting for the Confederacy: An Empirical Study of the American Civil War.'' \textit{American Political Science Review} 113(3): 658–73.
 	\item Green, Donald P., Tiffany C. Davenport, and Kolby Hanson. 2019. ``Are There Long-Term Effects of the Vietnam Draft on Political Attitudes or Behavior? Apparently Not.'' \textit{Journal of Experimental Political Science} 6(02): 71–80.
+	\item Loewen, Peter John, Royce Koop, Jaime Settle, and James H. Fowler. 2014. “A Natural Experiment in Proposal Power and Electoral Success.” \textit{American Journal of Political Science} 58(1): 189–96.
 \end{itemize}
 
 \noindent \textit{Deeper Dives:}
@@ -187,6 +188,7 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 \begin{itemize}
 	\item Boyd, Christina L., Lee Epstein, and Andrew D. Martin. 2010. ``Untangling the Causal Effects of Sex on Judging.'' \textit{American Journal of Political Science} 54(2): 389–411.
 	\item Mendelberg, Tali, Katherine T. McCabe, and Adam Thal. 2017. ``College Socialization and the Economic Views of Affluent Americans.'' \textit{American Journal of Political Science} 61(3): 606–23.
+	\item Black, Ryan C., and Ryan J. Owens. 2016. “Courting the President: How Circuit Court Judges Alter Their Behavior for Promotion to the Supreme Court.” \textit{American Journal of Political Science} 60(1): 30–43.
 \end{itemize}
 
 
@@ -198,6 +200,7 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 	\item Xu, Yiqing, and Eddie Yang. 2022. ``Hierarchically Regularized Entropy Balancing.'' \textit{Political Analysis}: 1–8.
 	\item King, Gary, Christopher Lucas, and Richard A. Nielsen. 2017. ``The Balance-Sample Size Frontier in Matching Methods for Causal Inference.'' \textit{American Journal of Political Science} 61(2): 473–89.
 	\item King, Gary, and Richard Nielsen. 2019. ``Why Propensity Scores Should Not Be Used for Matching.'' \textit{Political Analysis}: 1–20.
+	\item Ho, Daniel E., Kosuke Imai, Gary King, and Elizabeth A. Stuart. 2007. “Matching as Nonparametric Preprocessing for Reducing Model Dependence in Parametric Causal Inference.” \textit{Political Analysis} 15(3): 199–236.
 \end{itemize}
 
 \subsection*{Weeks 8--9: Fixed Effects}
@@ -212,13 +215,19 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 
 \begin{itemize}
 	\item Stokes, Leah C. 2016. ``Electoral Backlash against Climate Policy: A Natural Experiment on Retrospective Voting and Local Resistance to Public Policy.'' \textit{American Journal of Political Science} 60(4): 958–74.
+	\item Scott, Ralph. 2022. “Does University Make You More Liberal? Estimating the within-Individual Effects of Higher Education on Political Values.” \textit{Electoral Studies} 77.
+	\item Moskowitz, Daniel J. 2021. “Local News, Information, and the Nationalization of U.S. Elections.” \textit{American Political Science Review} 115(1): 114–29.
+	\item Hainmueller, Jens, and Dominik Hangartner. 2019. “Does Direct Democracy Hurt Immigrant Minorities? Evidence from Naturalization Decisions in Switzerland.” \textit{American Journal of Political Science} 63(3): 530–47.
 \end{itemize}
 
 \noindent \textit{Deeper Dives:}
 
 \begin{itemize}
+	\item Imai, Kosuke, and In Song Kim. 2019. ``When Should We Use Unit Fixed Effects Regression Models for Causal Inference with Longitudinal Data?'' \textit{American Journal of Political Science} 63(2): 467–90.
 	\item Imai, Kosuke, and In Song Kim. ``On the Use of Two-Way Fixed Effects Regression Models for Causal Inference with Panel Data.'' \textit{Political Analysis} 29, no. 3 (July 2021): 405–15.
+	\item Plümper, Thomas, and Vera E Troeger. 2018. “Not so Harmless After All: The Fixed-Effects Model.” \textit{Political Analysis} 27(1): 21–45.
 	\item Hazlett, Chad, and Leonard Wainstein. ``Understanding, Choosing, and Unifying Multilevel and Fixed Effect Approaches.'' \textit{Political Analysis} 30, no. 1 (January 2022): 46–65.
+	\item Bell, Andrew, and Kelvyn Jones. 2015. “Explaining Fixed Effects: Random Effects Modeling of Time-Series Cross-Sectional and Panel Data.” \textit{Political Science Research and Methods} 3(1): 133–53.
 \end{itemize}
 
 \subsection*{Weeks 10--11: Difference-in-Differences}
@@ -226,7 +235,7 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 \textit{Required Reading:}
 
 \begin{itemize}
-	\item NHK Chapter 18
+	\item NHK Chapters 17.1 and 18
 \end{itemize}
 
 \noindent \textit{Applications:}
@@ -234,6 +243,10 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 \begin{itemize}
 	\item Hall, Andrew B., and Jesse Yoder. 2022. ``Does Homeownership Influence Political Behavior? Evidence from Administrative Data.'' \textit{The Journal of Politics} 84(1): 351–66.
 	\item Knutsen, Carl Henrik, Andreas Kotsadam, Eivind Hammersmark Olsen, and Tore Wig. 2017. ``Mining and Local Corruption in Africa.'' \textit{American Journal of Political Science} 61(2): 320–34.
+	\item Kuipers, Nicholas, and Alexander Sahn. 2022. ``The Representational Consequences of Municipal Civil Service Reform.'' \textit{American Political Science Review}: 1–17.
+	\item Paglayan, Agustina S. 2019. ``Public-Sector Unions and the Size of Government.'' \textit{American Journal of Political Science} 63(1): 21–36.
+	\item Paglayan, Agustina S. 2021. ``The Non-Democratic Roots of Mass Education: Evidence from 200 Years.'' \textit{American Political Science Review} 115(1): 179–98.
+	\item Martin, Gregory J., and Joshua McCrain. 2019. “Local News and National Politics.” \textit{American Political Science Review} 113(2): 372–84.
 \end{itemize}
 
 \noindent \textit{Deeper Dives:}
@@ -258,6 +271,9 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 \begin{itemize}
 	\item Miguel, Edward, Shanker Satyanath, and Ernest Sergenti. 2004. ``Economic Shocks and Civil Conflict: An Instrumental Variables Approach.'' \textit{Journal of Political Economy} 112(4): 725–53.
 	\item Trounstine, Jessica. 2015. ``Segregation and Inequality in Public Goods.'' \textit{American Journal of Political Science} 60(3): 709–25.
+	\item Scheve, Kenneth, and Theo Serlin. 2022. ``The German Trade Shock and the Rise of the Neo-Welfare State in Early Twentieth-Century Britain.'' \textit{American Political Science Review}: 1–18.
+	\item Baccini, Leonardo, and Stephen Weymouth. 2021. ``Gone For Good: Deindustrialization, White Voter Backlash, and US Presidential Voting.'' \textit{American Political Science Review} 115(2): 550–67.
+	\item Fouka, Vasiliki, Soumyajit Mazumder, and Marco Tabellini. 2022. ``From Immigrants to Americans: Race and Assimilation during the Great Migration.'' \textit{The Review of Economic Studies} 89(2): 811–42.
 \end{itemize}
 
 \noindent \textit{Deeper Dives:}
@@ -284,6 +300,7 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 	\item Keele, Luke J., and Rocío Titiunik. 2015. ``Geographic Boundaries as Regression Discontinuities.'' \textit{Political Analysis} 23(1): 127–55.
 	\item Mummolo, Jonathan. 2018. ``Modern Police Tactics, Police-Citizen Interactions, and the Prospects for Reform.'' \textit{The Journal of Politics} 80(1): 1–15.
 	\item Hall, Andrew. 2015. ``What Happens When Extremists Win Primaries?'' \textit{American Political Science Review} 109(1): 1–46.
+	\item Apfeld, Brendan, Emanuel Coman, John Gerring, and Stephen Jessee. 2022. ``The Impact of University Attendance on Partisanship.'' \textit{Political Science Research and Methods}: 1–14.
 \end{itemize}
 
 \noindent \textit{Deeper Dives:}
