--- a/syllabus/POLS-8500-syllabus.tex
+++ b/syllabus/POLS-8500-syllabus.tex
@@ -102,7 +102,7 @@ Correlations alone are rarely satisfying. As social scientists, we don't just wa
 Your course grade will be based on three components.
 
 \begin{itemize}
-	\item \textbf{Readings and Annotations (25\%):} Each week, read the assigned chapters/articles and annotate them using \href{https://hypothes.is/groups/Qm2VnAae/causal-inference}{Hypothesis}.
+	\item \textbf{Readings and Annotations (25\%):} Each week, read the assigned chapters/articles and annotate them using \href{https://hypothes.is/groups/Qm2VnAae/causal-inference}{Hypothesis}. This is a seminar-style course, so class time will be devoted to discussion and practice, not lectures. It is your responsibility to learn the material through reading, and use Hypothesis to flag passages that are confusing and would benefit from further discussion in class.
 	\item \textbf{Replications (2 $\times$ 25\%):} Choose two of \textit{Applications} papers on the syllabus below (each student must choose a different set of papers). Using their posted replication materials, recreate the paper's key results in a Quarto report. You will present your findings in a Mock Conference Presentation during the second week of the module.
 	\item \textbf{Final Paper (25\%):} Write a final paper using one or more of the designs we introduced in class. This could be either an original research project or a re-analysis and extension of one of the papers you replicated.
 \end{itemize}
