--- a/syllabus/POLS-8500-syllabus.tex
+++ b/syllabus/POLS-8500-syllabus.tex
@@ -172,6 +172,7 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 \noindent \textit{Deeper Dives:}
 
 \begin{itemize}
+	\item Glynn, Adam N., and Konstantin Kashin. 2018. ``Front-Door Versus Back-Door Adjustment With Unmeasured Confounding: Bias Formulas for Front-Door and Hybrid Adjustments With Application to a Job Training Program.'' \textit{Journal of the American Statistical Association} 113(523): 1040–49.
 	\item Sekhon, Jasjeet S., and Rocío Rocio Titiunik. 2012. ``When Natural Experiments Are Neither Natural nor Experiments.'' \textit{American Political Science Review} 106(1): 35–57.
 \end{itemize}
 
