--- a/syllabus/POLS-8500-syllabus.tex
+++ b/syllabus/POLS-8500-syllabus.tex
@@ -110,7 +110,7 @@ Your course grade will be based on three components.
 
 \section*{Course Outline}
 
-Here is the rough plan of action for our semester together. Readings abbreviated ``NHK'' denote our primary textbook, Nick Huntington-Klein's \textit{The Effect}, available in hard copy or \href{https://theeffectbook.net/}{free online}.
+Here is the rough plan of action for our semester together. Readings abbreviated ``NHK'' denote our primary textbook, Nick Huntington-Klein's \textit{The Effect}, available in hard copy or \href{https://theeffectbook.net/}{free online}. (You should also check out the author's \href{https://www.youtube.com/playlist?list=PLcTBLulJV_AK1hKtnO0-kYrU0D09K-kj8}{YouTube channel} and collection of \href{https://github.com/NickCH-K/TheEffectAssignments}{homework assignments} that accompany the book.)
 
 \subsection*{Week 1: Garbage Cans, Causal Salads, and the Seven Deadly Sins}
 
