add deep dive papers to syllabus

--- a/syllabus/POLS-8500-syllabus.tex
+++ b/syllabus/POLS-8500-syllabus.tex
@@ -122,6 +122,17 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 	\item Schrodt, Philip A. 2014. ``\href{https://journals.sagepub.com/doi/pdf/10.1177/0022343313499597}{Seven Deadly Sins of Contemporary Quantitative Political Analysis.}'' \textit{Journal of Peace Research} 51(2): 287–300.
 \end{itemize}
 
+\textit{Deeper Dives:}
+
+\begin{itemize}
+	\item Keele, Luke, Randolph T. Stevenson, and Felix Elwert. 2020. ``The Causal Interpretation of Estimated Associations in Regression Models.'' \textit{Political Science Research and Methods} 8(1): 1–13.
+	\item Westreich, Daniel, and Sander Greenland. 2013. ``The Table 2 Fallacy: Presenting and Interpreting Confounder and Modifier Coefficients.'' \textit{American Journal of Epidemiology} 177(4): 292–98.
+	
+\end{itemize}
+
+
+
+
 \subsection*{Week 2: The Fundamental Problem}
 
 \textit{Required Reading:}
@@ -314,9 +325,10 @@ Here is the rough plan of action for our semester together. Readings abbreviated
 	\item Ornstein, Joseph T. \& Duck-Mayr, JBrandon. 2022. ``Gaussian Process Regression Discontinuity''. \textit{Working Paper}.
 \end{itemize}
 
-\subsection*{Week 16: Bonus Week}
-
-\textit{Readings TBD}
+% Why was there a week 16 listed on the syllabus? There should only be 15 weeks in a semester, right?
+%\subsection*{Week 16: Bonus Week}
+%
+%\textit{Readings TBD}
 
 
 \section*{Academic Honesty}
